@@ -302,7 +302,7 @@
 
     <div data-role="page" id="query-retrieve" >
       <div data-role="header" >
-	<h1><span class="orthanc-name"></span>DICOM Query/Retrieve (1/3)</h1>
+	<h1><span class="orthanc-name"></span>DICOM Query/Retrieve (1/4)</h1>
         <a href="#find-patients" data-icon="home" class="ui-btn-left" data-direction="reverse">Patients</a>
       </div>
       <div data-role="content">
@@ -368,7 +368,7 @@
 
     <div data-role="page" id="query-retrieve-2" >
       <div data-role="header" >
-	<h1><span class="orthanc-name"></span>DICOM Query/Retrieve (2/3)</h1>
+	<h1><span class="orthanc-name"></span>DICOM Query/Retrieve (2/4)</h1>
         <a href="#find-patients" data-icon="home" class="ui-btn-left" data-direction="reverse">Patients</a>
         <a href="#query-retrieve" data-icon="search" class="ui-btn-right" data-direction="reverse">Query/Retrieve</a>
       </div>
@@ -381,13 +381,39 @@
 
     <div data-role="page" id="query-retrieve-3" >
       <div data-role="header" >
-	<h1><span class="orthanc-name"></span>DICOM Query/Retrieve (3/3)</h1>
+	<h1><span class="orthanc-name"></span>DICOM Query/Retrieve (3/4)</h1>
         <a href="#find-patients" data-icon="home" class="ui-btn-left" data-direction="reverse">Patients</a>
         <a href="#query-retrieve" data-icon="search" class="ui-btn-right" data-direction="reverse">Query/Retrieve</a>
       </div>
       <div data-role="content">
-        <ul data-role="listview" data-inset="true" data-filter="true" data-split-icon="arrow-d" data-split-theme="b">
+        <ul data-role="listview" data-inset="true" data-filter="true">
         </ul>
+      </div>
+    </div>
+
+
+    <div data-role="page" id="query-retrieve-4" >
+      <div data-role="header" >
+	<h1><span class="orthanc-name"></span>DICOM Query/Retrieve (4/4)</h1>
+        <a href="#find-patients" data-icon="home" class="ui-btn-left" data-direction="reverse">Patients</a>
+        <a href="#query-retrieve" data-icon="search" class="ui-btn-right" data-direction="reverse">Query/Retrieve</a>
+      </div>
+
+      <div data-role="content">
+        <form data-ajax="false" id="retrieve-form">
+          <div data-role="fieldcontain">
+	    <label for="retrieve-target">Target AET:</label>
+            <input type="text" name="retrieve-target" id="retrieve-target"></input>
+	  </div>
+
+          <fieldset class="ui-grid-b">
+	    <div class="ui-block-a"></div>
+	    <div class="ui-block-b">
+              <button id="retrieve-submit" type="submit" data-theme="b">Retrieve</button>
+            </div>
+	    <div class="ui-block-c"></div>
+	  </fieldset>
+        </form>
       </div>
     </div>
 
